# Cache-simulator

./: 实验报告.md  文档.docx
cache/: CMakeLists.txt  cache.cpp  cache.h  generage_log.sh  main  main.cpp  makefile  policy_lru.h  policy_mru.h  policy_node.h  policy_plru.h  policy_random.h  qxl_astar_lru.sh  qxl_bzip2_random.sh  replacement_policy.cpp  replacement_policy.h  test.sh  test4.sh  test5.sh
cache/trace/: test.trace
test_for_cache/: CMakeLists.txt  main.cpp
